[FIX] fix non visible bottom

--- a/styles/content_file.css
+++ b/styles/content_file.css
@@ -2,6 +2,7 @@
     margin-top: 100px;
     margin-left: 3%;
     margin-right: 3%;
+    margin-bottom: 60px;
 }
 
 .putText {
